Feat: Organização dos controllers. Feat: Adição de e-mail e endereço no usuario
